Implemented basic delegator, domain and other packages
