# src/main/java/ua/shtaiier/phonecontacts/dto/ContactDto.java
@@ -1,15 +1,15 @@
-package ua.shtaiier.phonecontacts.dto;
-
-
-import lombok.Data;
-
-import java.util.List;
-
-@Data
-public class ContactDto {
-
-    private Integer id;
-    private List<String> emails;
-    private List<String> phoneNumbers;
-
-}
+//package ua.shtaiier.phonecontacts.dto;
+//
+//
+//import lombok.Data;
+//
+//import java.util.List;
+//
+//@Data
+//public class ContactDto {
+//
+//    private Integer id;
+//    private List<String> emails;
+//    private List<String> phoneNumbers;
+//
+//}
