# src/main/resources/openapi.yaml
@@ -38,7 +38,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         200:
           description: Success
@@ -66,6 +66,10 @@ paths:
       responses:
         201:
           description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ContactDto"
         400:
           description: Bad Request
 
@@ -90,6 +94,10 @@ paths:
       responses:
         200:
           description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ContactDto"
         400:
           description: Bad Request
 
